<resources>

    <string name="app_name">宝宝日记</string>
    <string name="backlog_item_activity_label">宝宝日记</string>
    <string name="day_plan_activity_label">Tasks of Today</string>
    <string name="dashboard_activity_label">Review</string>
    <string name="ok">OK</string>
    <string name="action_mark">Add</string>
    <string name="action_daily">Daily</string>
    <string name="action_weekly">Weekly</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="backlog_completed">Completed</string>
    <string name="hint_title">Title</string>
    <string name="hint_desc">Description</string>
    <string name="hint_add_backlog_title">Add backlog</string>
    <string name="built_in_task_weinai">母乳,0,30,120,1,0</string>
    <string name="built_in_task_naifen">奶粉,1,0,0,0,0</string>
    <string name="built_in_task_shuijiao">睡觉,0,120,0,0,0</string>
    <string name="built_in_task_xiaobian">小便,1,0,120,0,1</string>
    <string name="built_in_task_dabian">大便,1,0,180,0,1</string>
    <string name="built_in_task_tiwen">体温,1,3,0,1,0</string>
    <string name="built_in_task_shengao">身高,1,0,180,0,1</string>
    <string name="built_in_task_tizhong">体重,1,0,180,0,1</string>
    <string name="built_in_task_jiyi">回忆,1,0,0,0,0</string>
    
    <string name="task_weinai">母乳</string>
    <string name="task_naifen">奶粉</string>
    <string name="task_shuijiao">睡觉</string>
    <string name="task_xiaobian">小便</string>
    <string name="task_dabian">大便</string>
    <string name="task_tiwen">体温</string>
    <string name="task_shengao">身高</string>
    <string name="task_tizhong">体重</string>
    <string name="task_jiyi">回忆</string>
    <string name="view_rawdata">每日活动</string>
    <string name="view_shengao">身高曲线</string>
    <string name="view_tizhong">体重曲线</string>
    <string name="view_jiyi">美好记忆</string>
    <string name="gender_boy">男宝宝</string>
    <string name="gender_girl">女宝宝</string>
    <string name="profile_birthday">生日</string>
    <string name="show_all_switch">Show Completed Items</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="delete">删除</string>
    <string name="profile_name">宝宝姓名</string>
    <string name="profile_tizhong">出生体重</string>
    <string name="profile_shengao">出生身高</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>

    <string-array name="Pages">
        <item>记录今天</item>
        <item>查看过去</item>
        <item>宝宝档案</item>
    </string-array>
    <string-array name="ReportTypes">
        <item>Daily Report</item>
        <item>Weekly Report</item>
    </string-array>

    <string name="empty_view_text">No task today, click to choose tasks for today.</string>
    <string name="refresh">Refresh</string>
    <string name="report">Report</string>

</resources>