<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#1E9BDD" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:background="#ECF0F1" >
        </LinearLayout>

        <ImageButton
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:background="@drawable/image_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" >
        </ImageButton>

        <TextView
            android:id="@+id/profile_name"
            style="@style/WizardPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignBottom="@id/profile_pic"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/profile_pic"
            android:hint="@string/profile_name"
            android:textSize="30dp" >

            <requestFocus />
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ECF0F1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profile_gender"
            style="@style/ProfileFormLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender_boy" >
        </TextView>

        <TextView
            android:id="@+id/profile_birthday"
            style="@style/ProfileFormLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_birthday" >
        </TextView>

        <TextView
            android:id="@+id/profile_iniShengao"
            style="@style/ProfileFormLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_shengao" >
        </TextView>

        <TextView
            android:id="@+id/profile_iniTizhong"
            style="@style/ProfileFormLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_tizhong" >
        </TextView>
    </LinearLayout>

</LinearLayout>